--- a/app/src/main/res/layout/content_sign_up.xml
+++ b/app/src/main/res/layout/content_sign_up.xml
@@ -34,6 +34,7 @@
             android:id="@+id/email_sign_up_form"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="52dp"
             android:orientation="vertical">
 
             <android.support.design.widget.TextInputLayout
@@ -86,12 +87,12 @@
 
 
             <Button
-                android:onClick="sendSignUpData"
                 android:id="@+id/email_sign_up_button"
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:onClick="sendSignUpData"
                 android:text="@string/action_sign_up"
                 android:textStyle="bold" />
 
